build/log/idf_py_stderr_output_355443
/home/andrespf02/esp/final2/person_detection/main/main.cc: In function 'void tf_main()':
/home/andrespf02/esp/final2/person_detection/main/main.cc:24:18: error: 'GPIO_NUM_4' was not declared in this scope
   24 | #define LED_GPIO GPIO_NUM_4
      |                  ^~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main.cc:31:18: note: in expansion of macro 'LED_GPIO'
   31 |   gpio_set_level(LED_GPIO, 1);
      |                  ^~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main.cc:31:3: error: 'gpio_set_level' was not declared in this scope
   31 |   gpio_set_level(LED_GPIO, 1);
      |   ^~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:104: esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
